# mcp-hub

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  upstreams.yaml
.github/workflows/: ci.yml
docs/designs/: pikvm-integration.md
mcp_hub/: __init__.py  config.py  database.py  logging_config.py  main.py  mcp_server.py  metrics.py  tasks.py
mcp_hub/models/: __init__.py  audit_log.py  canary.py  email.py  idempotency.py  improvement.py  marketing.py  mr_review.py  service_lock.py  solution_pattern.py  ticket.py  tool_log.py
mcp_hub/proxy/: __init__.py  connector.py  defaults.py  env_resolver.py  manager.py  registry.py
mcp_hub/tools/: __init__.py  _validation.py  audit_tools.py  canary_tools.py  db_audit_tools.py  email_tools.py  gitlab_tools.py  homelab_tools.py  improvement_tools.py  k8s_tools.py  kvm.py  marketing_tools.py  mr_review_tools.py  service_lock_tools.py  solution_pattern_tools.py  ticket_tools.py
migrations/: env.py
migrations/versions/: 793c360ea968_update_comment_role_constraint.py  9b8a7c6d5e4f_add_service_locks.py  (+11 more)
templates/: dashboard.html
tests/: conftest.py  test_audit_tools.py  test_data_integrity.py  test_gitlab_tools.py  test_health.py  test_homelab_tools.py  test_improvement_tools.py  test_k8s_tools.py  test_logging_format.py  test_marketing_tools.py  test_mr_review_tools.py  test_proxy.py  test_proxy_manager.py  test_schema_sync.py  test_solution_pattern_tools.py  test_tasks.py  test_ticket_tools.py  test_validation.py
(+2 files in other folders)
